--- a/QMVCFramework.csproj
+++ b/QMVCFramework.csproj
@@ -9,8 +9,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <ProjectGuid>{C6058381-7BFE-5ACE-6081-CE921B1C2216}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -62,8 +61,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Frame\EasyEvent.cs" />
-    <Compile Include="Assets\Frame\IOCContainer.cs" />
     <Compile Include="Assets\Frame\TypeEventSystem.cs" />
+    <Compile Include="Assets\Frame\IOCContainer.cs" />
     <Compile Include="Assets\Frame\MvcFrame.cs" />
   </ItemGroup>
   <ItemGroup>
